--- a/application.yml
+++ b/application.yml
@@ -1,11 +1,11 @@
-server:
-  port: 8191
-spring:
-  cloud:
-    config:
-      server:
-        git:
-          uri: https://github.com/harishkumar165/spring-cloud-config-store
-          search-paths:
-           - '*service'
+#server:
+#  port: 8191
+#spring:
+#  cloud:
+#    config:
+#      server:
+#        git:
+#          uri: https://github.com/harishkumar165/spring-cloud-config-store
+#          search-paths:
+#           - '*service'
 
